# kidsability-checkout-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/: RELEASE.md
.github/workflows/: backend.yaml  extension.yaml  server.yaml
client/: .gitignore  next.config.js  package.json  tsconfig.json
client/pages/: _app.tsx  _document.tsx  graphiql.tsx  index.tsx
client/pages/checkout/: [code].tsx
client/pages/item/: [code].tsx
client/services/: apollo.tsx  chakra.tsx
client/utils/: routing.ts  storage.ts
extension/: .gitignore  package.json  tsconfig.json  tsconfig.webpack.json  webpack.config.js
extension/public/: find-bookbag.js  find-loan-days.js  index.html  make-booking.js  manifest.json
extension/src/: app.tsx  index.css  index.tsx  theme.tsx  utils.ts  worker.ts
server/: Cargo.toml
server/src/: checkout.rs  env.rs  graph.rs  main.rs  meta.rs
server/src/graph/: checkout.rs  meta.rs  mutation.rs  query.rs  subscription.rs
