[package]
name = "kidsability-checkout-assistant-server"
version = "0.1.0"
authors = ["Steven Xie <dev@stevenxie.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.40"
chrono = "^0.4.19"
dotenv = "^0.15.0"
futures = "^0.3.14"
graphql = { package = "async-graphql", version = "^2.8.4", features = ["chrono"] }
graphql_warp = { package = "async-graphql-warp", version = "^2.8.4" }
http = "^0.2.4"
log = "^0.4.14"
logger = { package = "pretty_env_logger", version = "^0.4.0" }
tokio = { version = "^1.5.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio_stream = { package = "tokio-stream", version = "^0.1.5" }
warp = "^0.3.1"
warp_proxy = { package = "warp-reverse-proxy", version = "^0.3.1" }


[build-dependencies]
anyhow = "^1.0.40"
chrono = "^0.4.19"
git = { package = "git2", version = "^0.13.18" }
semver = "^0.11.0"

[build-dependencies.cargo-husky]
version = "^1.5.0"
default-features = false
features = [
  "precommit-hook",
  "run-for-all",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
]
